# MCU-AgentBeats

./: .gitignore  Dockerfile  README.md  models.py  pyproject.toml  requirements.txt  test_evaluation.py  test_purple_agent.py  test_scenario.toml
MCU_benchmark/: evaluate_with_progress.py  run_longterm_task.py  run_task.py  test.py  test_pipeline.py
MCU_benchmark/auto_eval/criteria_files/: brew_potion_of_fire_resistance.txt  craft_furnace.txt  explore_the_treasure.txt  kill_ender_dragon.txt  light_up_the_surroundings.txt  mine_diamond_from_scratch.txt
MCU_benchmark/task_configs/overall/: collect_wood.yaml  combat_witch.yaml  craft_the_crafting_table.yaml  craft_to_cake.yaml  decorate_the_ground.yaml  drop_an_item.yaml  explore_map.yaml  hunt_pigs.yaml  light_up_the_surroundings_at_night.yaml  mine_diamond_from_scratch.yaml  mine_iron_ore.yaml
MCU_benchmark/task_configs/tasks/building/: build_a_house.yaml  build_a_ladder.yaml  build_a_library.yaml  build_a_maze.yaml  build_a_tower.yaml  build_a_wall.yaml  build_a_waterfall.yaml  build_gate.yaml  build_nether_portal.yaml  build_pillar.yaml  build_snow_golem.yaml  dig_three_down_and_fill_one_up.yaml
MCU_benchmark/task_configs/tasks/collect/: collect_grass.yaml
MCU_benchmark/task_configs/tasks/combat/: combat_enderman.yaml  combat_skeletons.yaml  combat_spiders.yaml  combat_witch.yaml  combat_wolfs.yaml  combat_zombies.yaml  hunt_horse.yaml  hunt_pigs.yaml  shoot_phantom.yaml
MCU_benchmark/task_configs/tasks/craft/: craft_bee_nest.yaml  craft_bell.yaml  craft_oak_planks.yaml  craft_stonecut.yaml  craft_to_cake.yaml  craft_to_clock.yaml
MCU_benchmark/task_configs/tasks/crafting/: craft_bee_nest.yaml  craft_diorite.yaml  craft_enchanting_table.yaml  craft_furnace.yaml  craft_ladder.yaml  craft_oak_planks.yaml  craft_smelting.yaml  craft_stonecut.yaml  craft_the_crafting_table.yaml  (+2 more)
MCU_benchmark/utility/: milestone_tracker.py  progress_evaluator.py  read_conf.py
examples/: eval_configs.py  test_agent.py
green_agent/src/: agent.py  model.py  util.py
minestudio/simulator/callbacks/: rewards.py
src/: agent.py  engine_util.py  messenger.py  model.py  prompt.txt  server.py  util.py
test/: conftest.py  test_agent.py
tutorial/: pyproject.toml  top-level-conda.txt
tutorial/agentbeats/: client.py  client_cli.py  run_scenario.py
tutorial/mcu/: Dockerfile.mcu-agent  Dockerfile.mcu-evaluator  mcu_agent.py  mcu_evaluator.py  model.py  scenario.toml  util.py
(+75 files in other folders)
