[project]
name = "MCU-benchmark-green-agent"
version = "0.1.0"
description = "A A2A green agents for MCU benchmark evaluation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "nest-asyncio>=1.6.0",
    "psutil>=7.2.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "psutil>=7.2.1",
    "pyglet==1.4.0b1",
    # MineStudio from github
    "minestudio @ git+https://github.com/CraftJarvis/MineStudio.git"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
