[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MCU-agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial for MCU benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "litellm>=1.0.0",
    "loguru>=0.7.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "psutil>=7.2.1",
    "pyglet==1.4.0b1",
    # MineStudio from github
    "minestudio @ git+https://github.com/CraftJarvis/MineStudio.git",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["agentbeats"]
